Addition of Script for Py and then some geometry images

--- a/DSPcode/strdmap-master/rdmap.ipynb
+++ b/DSPcode/strdmap-master/rdmap.ipynb
@@ -249,58 +249,58 @@
     }
    ],
    "source": [
-    "# Algorithm 3:\n",
+    "# # Algorithm 3:\n",
     "\n",
-    "# To avoid the problem of discarding so many samples. but still getting the\n",
-    "# benefits of \"integration time\" we present a RD map made using a slow time\n",
-    "# transform\n",
+    "# # To avoid the problem of discarding so many samples. but still getting the\n",
+    "# # benefits of \"integration time\" we present a RD map made using a slow time\n",
+    "# # transform\n",
     "\n",
-    "# sometimes this algorithm is known as the FFT in batches.\n",
-    "\n",
-    "\n",
-    "stmap = np.zeros((nbatches,overlap), dtype=complex)\n",
-    "\n",
-    "for si in range(nbatches):\n",
-    "\n",
-    "    sig1 = nn[si*bs: (si+1)*(bs)]\n",
-    "    # increase the lengh of sig1 by overlap\n",
-    "    sig1 = np.concatenate((sig1, np.zeros(overlap)), axis=0)\n",
-    "    sig2 = nn2[si*bs: (si+1)*(bs) + overlap]\n",
-    "    xc = np.fft.ifft(np.fft.fft(sig1) * np.conj(np.fft.fft(sig2)))\n",
-    "    stmap[si, :]  = xc[0:overlap]\n",
-    "\n",
-    "# plot the slow time correlation\n",
-    "plt.figure()\n",
-    "plt.imshow(np.abs(stmap))\n",
-    "plt.xlabel('Range (samples)')\n",
-    "plt.ylabel('Slow Time (batch #)')\n",
-    "# plt.savefig('slowtime.png', dpi=360)\n",
-    "\n",
-    "# if we take the fft at range of 100, we can get the Doppler\n",
-    "plt.figure()\n",
-    "plt.plot(abs(np.fft.fft(stmap[:,100])))\n",
+    "# # sometimes this algorithm is known as the FFT in batches.\n",
     "\n",
     "\n",
-    "# next step is to perform the fft for each column of of the slow time map\n",
-    "stRDmap = np.zeros((nbatches, overlap), dtype=complex)\n",
-    "for ri in np.arange(overlap):\n",
-    "\tstRDmap[:,ri] = np.fft.fftshift(np.fft.fft(stmap[:,ri]))\n",
+    "# stmap = np.zeros((nbatches,overlap), dtype=complex)\n",
+    "\n",
+    "# for si in range(nbatches):\n",
+    "\n",
+    "#     sig1 = nn[si*bs: (si+1)*(bs)]\n",
+    "#     # increase the lengh of sig1 by overlap\n",
+    "#     sig1 = np.concatenate((sig1, np.zeros(overlap)), axis=0)\n",
+    "#     sig2 = nn2[si*bs: (si+1)*(bs) + overlap]\n",
+    "#     xc = np.fft.ifft(np.fft.fft(sig1) * np.conj(np.fft.fft(sig2)))\n",
+    "#     stmap[si, :]  = xc[0:overlap]\n",
+    "\n",
+    "# # plot the slow time correlation\n",
+    "# plt.figure()\n",
+    "# plt.imshow(np.abs(stmap))\n",
+    "# plt.xlabel('Range (samples)')\n",
+    "# plt.ylabel('Slow Time (batch #)')\n",
+    "# # plt.savefig('slowtime.png', dpi=360)\n",
+    "\n",
+    "# # if we take the fft at range of 100, we can get the Doppler\n",
+    "# plt.figure()\n",
+    "# plt.plot(abs(np.fft.fft(stmap[:,100])))\n",
     "\n",
     "\n",
-    "plt.figure()\n",
-    "sdata = np.shape(stRDmap)\n",
-    "gridx = np.arange(0, sdata[1])\n",
-    "gridy = (np.arange(0, nbatches)/nbatches - 0.5) *2*bs*0.75\n",
+    "# # next step is to perform the fft for each column of of the slow time map\n",
+    "# stRDmap = np.zeros((nbatches, overlap), dtype=complex)\n",
+    "# for ri in np.arange(overlap):\n",
+    "# \tstRDmap[:,ri] = np.fft.fftshift(np.fft.fft(stmap[:,ri]))\n",
     "\n",
-    "plt.imshow(np.abs(stRDmap), extent=[np.min(gridx), np.max(gridx), np.min(gridy), np.max(gridy)], aspect='auto')\n",
-    "plt.xlabel('Range (samples)')\n",
-    "plt.ylabel('Doppler (Hz)')\n",
-    "# plt.savefig('batch-fft-rdmap.png', dpi=360)\n",
     "\n",
-    "# note the plot looks similar to the previous one, however it is much faster\n",
-    "# due to less discarded data.\n",
+    "# plt.figure()\n",
+    "# sdata = np.shape(stRDmap)\n",
+    "# gridx = np.arange(0, sdata[1])\n",
+    "# gridy = (np.arange(0, nbatches)/nbatches - 0.5) *2*bs*0.75\n",
     "\n",
-    "# However, it does have a little less frequency resolution, due to the number of batches selected.\n"
+    "# plt.imshow(np.abs(stRDmap), extent=[np.min(gridx), np.max(gridx), np.min(gridy), np.max(gridy)], aspect='auto')\n",
+    "# plt.xlabel('Range (samples)')\n",
+    "# plt.ylabel('Doppler (Hz)')\n",
+    "# # plt.savefig('batch-fft-rdmap.png', dpi=360)\n",
+    "\n",
+    "# # note the plot looks similar to the previous one, however it is much faster\n",
+    "# # due to less discarded data.\n",
+    "\n",
+    "# # However, it does have a little less frequency resolution, due to the number of batches selected.\n"
    ]
   }
  ],
