--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -493,7 +493,29 @@
   doi = {10.1109/RADAR49081.2020.9231322},
 }
 
+@misc{RPiCase,
+  title        = {Raspberry Pi 5 Case for Pimoroni NVMe SSD Base Option},
+  author       = {Rasmussen and Printables},
+  year         = 2024,
+  url          = {https://www.printables.com/model/722026-raspberry-pi-5-case-for-pimoroni-nvme-ssd-base-opt},
+  note         = {Accessed: 2024-10-04},
+}
 
+@misc{TCPoverview,
+  author       = {Ishan Dhar},
+  title        = {TCP Connections and Sockets: Deep Dive into Networking Fundamentals with Linux and Python},
+  howpublished = {\url{https://medium.com/@dhar.ishan04/tcp-connections-and-sockets-deep-dive-into-networking-fundamentals-with-linux-and-python-4c717ca6115}},
+  year         = {2020},
+  note         = {Accessed: 2024-10-08}
+}
+
+@misc{SSHOverview,
+  author = {Alexander Gillis},
+  title = {Secure Shell (SSH)},
+  year = {2023},
+  url = {https://www.techtarget.com/searchsecurity/definition/Secure-Shell},
+  note = {Accessed: 2024-10-08}
+}
 
 
 
