Getting there with progress

--- a/eecs-thesis-template-main/thesis/sections/01_body/00_introduction.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/00_introduction.tex
@@ -1,9 +1,8 @@
 \chapter{Introduction \label{sec:introduction}}
-\todo[inline]{Introduction: introduce the problem space and (at a high level) any relevant problem-space background. Summarise the contents of the remaining sections in the document (excluding appendices). \\ UPDATE FOR FINAL}
+\todo[inline]{To Do:}
 
 % CONTENT
-This section will contain a clear definition of the thesis topic, goals, project scope, and
-relevance of the project. 
+This section will contain a clear definition of the thesis topic, goals, project scope, and relevance of the project. 
 
 \section{Topic and Relevance}
 Passive radar detection technology is a class of radar detection whereby the radar system does not emit any radiation. Instead, it uses existing electromagnetic signals in the environment, such as television or radio broadcasts, to detect and track objects. Passive radar can be bistatic, whereby the transmitter and receiver are separate, or multistatic, where there are multiple receivers. The technology has been around since the early 20th century, but has only recently become feasible due to advances in digital signal processing and computing \cite{INTRO2017}. The technology has a number of advantages over traditional radar systems. It is covert, as it does not emit any radiation, and is therefore difficult to detect and directly jam, leading to a concentrated interest from defence cirlces \cite{DTSO2009}. It is also relatively cheap, as it does not require a dedicated transmitter and hence has less energy consumption. Conversely, it has a number of disadvantages, such as a lower signal-to-noise ratio, and a requirement for a relatively large amount of computational power to process the received signals \cite{INTRO2017}.
@@ -12,15 +11,6 @@ Passive radar detection technology is a class of radar detection whereby the rad
 \vspace{0.5cm} 
 Bistatic passive radar detection has a wide range of applications centered around situational awareness, including air traffic control, border security, and environmental monitoring. Embedding the passive radar technology is a relatively new field buoyed by recent and increasing developments in computational power on Internet of Things (IoT) devices \cite{IOTpassiveRadar}. Key components and processes of a passive radar RX system include the antenna, the receiver hardware (software defined radio), signal sampling hardware and memory, along with the compute to complete the digital signal processing \cite{FundamentalsPassiveRadar}. Advantages of implementing some or even all of these components in a low cost manner include increased scaleability, portability, and lower reliance on external high cost hardware such as a PC.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \vspace{1cm} 
-% \textbf{CUT (not relevant)}: Moreover, this project will also explore the possibility of scaling up this bistatic setup to a multistatic system, and the potential advantages and disadvantages of such.
-% This project aims to reinforce and build on existing technology by creating a low-cost, modular, small-scale embedded passive radar detection system.  
-
-% \par
-% \vspace{0.5cm} 
-% \noindent More specifically, the project will focus on streamlining the signal processing and computational requirements of both the line of sight signal and the reflected target signal onto a singular embedded setup, without PC hardware. This will be achieved by using a combination of existing embedded IoT hardware, and through using existing DSP (digital signal processing) and radar filtering algorithms. Initially, the illuminator of opportunitys explored are digital broadcast signals, and the target signal will be aerial vehicles. Noting that a range of other terrestrial illuminator signals can be utilised, often depending on the required use case, such as the tracking target and environment \cite{DABsignal}.
-% %%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Aims and Objectives} \label{sec:aims}
 To explore the feasibility of a low cost embedded passive bistatic radar detection, and provide a scaleable proof of concept, this thesis aims to provide a user friendly testbed for digital signal based passive radar detection. The work conducted in this thesis and the eventual prototype hopes to decrease the barriers to entry for passive radar detection technology, and provide a platform for further research and development in the field. At a high level, the primary objectives of this thesis project are;
